[package]
name = "lifecare_data"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
axum = { version = "0.7.7", features = ["multipart", "macros"]}
calamine = "0.25.0"
chrono = {version = "0.4.38", features = ["serde"]}
csv = "1.3.0"
minijinja = { version = "2.3.1", features = ["builtins"] }
sanitize-filename = "0.5.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
sqlx = {version = "0.8.2", features = ["sqlite", "runtime-tokio"]}
tempfile = "3.13.0"
tokio = { version = "1.40.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
